updated gallery item styling to use bs stuff where possible. Bug recorded - its not responsive at mo

--- a/src/Pantry/wwwroot/css/pin-card.css
+++ b/src/Pantry/wwwroot/css/pin-card.css
@@ -7,6 +7,10 @@
  *** Pin Card CSS ***
  */
 
+.pin-margin {
+    margin: 0 -7px 10px -7px;
+}
+
 .pin-card {
 	display: inline-block;
 	background: #FEFEFE;
